basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
         kubernetes.io/ingress.global-static-ip-name: "alpha-ip"
spec:
  backend:
    serviceName: web
    servicePort: 8080
