ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/ingress.global-static-ip-name: "public-ingress"
spec:
  backend:
    serviceName: nginx
    servicePort: 80
