traefik-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "alpha-ip"
spec:
  backend:
    serviceName: traefik
    servicePort: 80
